src/test/contracts/negative/pattern_match3.jsligo
let test_foo = (x : test_exec_result) : string => {
  match(x) {
    when(Success(_)): "";
    when(Failure(_)): ""
  };
}
